--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,10 @@
 body{
     align-items: center;
     text-align: center;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
 }
 
 #topBox {
@@ -16,9 +20,7 @@ body{
     display:block;
     width:40vw;
     height:70vh;
-    position: absolute;
-    left:5vw;
-    top: 27.5vh;
+    
 }
 
 #outputBox {
@@ -26,10 +28,11 @@ body{
     display:block;
     width:40vw;
     height:70vh;
-    position: absolute;
-    left:50vw;
-    top: 27.5vh;
 }
+
+/* #bottomBoxes {
+    flex-direction: row;
+} */
 
 #insideBox {
     border:2px solid yellow;
